--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,8 +7,52 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  quality:
+    name: Quality Check
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: "go.mod"
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
+          args: --timeout=5m
+
+      - name: Check Formatting
+        run: |
+          if [ -n "$(gofmt -l .)" ]; then
+            echo "Go code is not formatted:"
+            gofmt -d .
+            exit 1
+          fi
+
+  security:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: "go.mod"
+
+      - name: Install govulncheck
+        run: go install golang.org/x/vuln/cmd/govulncheck@latest
+
+      - name: Run Vulnerability Check
+        run: govulncheck ./...
+
+  test-build:
+    name: Test & Build
+    runs-on: ubuntu-latest
+    needs: [quality, security]
     steps:
       - uses: actions/checkout@v4
 
@@ -23,11 +64,8 @@ jobs:
       - name: Dependencies
         run: go mod download
 
-      - name: Vet
-        run: go vet ./...
-
-      - name: Test
-        run: go test -race -v ./...
+      - name: Test (Race & Coverage)
+        run: go test -race -coverprofile=coverage.out -v ./...
 
       - name: Build
         run: go build -v ./cmd/server
